--- a/scss/_drupal-override-app-page.scss
+++ b/scss/_drupal-override-app-page.scss
@@ -89,6 +89,7 @@
 .applicationDescription .field--name-apic-summary .field--item {
   font-size: 14px;
   line-height: 20px;
+  word-break: break-word;
 }
 
 // Табы в разделе "Идентификационные данные"
