--- a/scss/_drupal-override-support.scss
+++ b/scss/_drupal-override-support.scss
@@ -190,6 +190,12 @@ article.faq {
   padding: .625rem 1.5rem .625rem;
 }
 
+.user-register-form {
+  .reload-captcha-wrapper {
+    position: static;
+  }
+}
+
 .reload-captcha {
   font-weight: 500;
   font-size: .875rem;
