--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -15,6 +15,7 @@ $color-primary-50: #3A85FF; //NEW COLOR
 $color-primary-60: #0062FF;
 $color-error-50: #F64E4E;
 
+$color-darkweb-special-green: #5ECF70;
 $color-darkweb-text-primary: #E2E5E9;
 $color-darkweb-basic-primary: #4789EB;
 $color-darkweb-bg: #252A32;
