--- a/scss/_drupal-override-api-page.scss
+++ b/scss/_drupal-override-api-page.scss
@@ -265,6 +265,7 @@ use {
 // Расширения API
 .apiconnect-explorer .extensionDisplay code div {
   background-color: transparent;
+  padding: 1rem 2rem 1rem 1rem;
 }
 
 // Тип / эндпоинт
@@ -331,6 +332,12 @@ use {
   grid-template-columns: unset;
   grid-row-gap: unset;
   padding: 0;
+  margin-bottom: .5rem;
+  color: $color-neutral-50;
+
+  .key.securityName {
+    margin-right: .5rem;
+  }
 }
 
 // .apiconnect-explorer .operationDisplay .testToolSecurity {
