--- a/scss/_drupal-override-product.scss
+++ b/scss/_drupal-override-product.scss
@@ -151,6 +151,9 @@
     margin-top: .5rem;
   }
 }
+.field-clickable {
+  display: none;
+}
 // Саммари (сводка) продукта
 .apicProduct .label, .apicProduct .apicProductSummary .field--label, .apicProduct .apicAttachments .field--label, .apicProduct .customFields .field--label, .apicProduct .apicProductDesc .field--label, .apicProduct .customDocPages .field--label {
   font-weight: 500;
@@ -162,6 +165,40 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+}
+
+// Теги
+.apicProductCardTags {
+  position: absolute;
+  width: fit-content;
+  max-width: 13rem;
+  right: 1.25rem;
+  bottom: 1.25rem;
+  pointer-events: none;
+
+  .field--label {
+    display: none;
+  }
+
+  .field--items {
+    display: flex;
+
+    .field--item {
+      width: fit-content;
+      padding: .25rem .5rem;
+      border: 1px solid;
+      border-radius: 4px;
+      font-size: .75rem;
+      margin: 0 .25rem;
+  
+      &:nth-child(odd) {
+        border-color: $color-darkweb-basic-primary;
+      }
+      &:nth-child(even) {
+        border-color: #576375;
+      }
+    }
+  }
 }
 
 // Страница продукта ------------------------------------------------------
@@ -225,6 +262,11 @@
   p {
     margin-bottom: 1.5rem;
   }
+}
+
+// Теги
+.apicProductTags {
+  display: none;
 }
 
 // Описание / обзор
