--- a/scss/_drupal-override-product.scss
+++ b/scss/_drupal-override-product.scss
@@ -31,6 +31,15 @@
   }
 }
 
+// Блок с карточками
+.product-view .view-content {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 1rem 2rem 0;
+  max-width: 1220px;
+  margin: 0 auto;
+}
+
 // Карточка продукта в каталоге API ----------------------------------------------------
 .bx--card .apicProductCard {
   padding-left: 0;
@@ -42,7 +51,7 @@
 .node--type-product.bx--card {
   height: auto;
   min-height: 13.25rem;
-  margin-bottom: 2rem;
+  margin: 0 1rem 2rem 0;
 }
 
 @media (max-width: 767px) {
@@ -53,6 +62,11 @@
 }
 
 @media (max-width: 374px) {
+  .product-view .view-content .views-row {
+    width: 100%;
+    padding: 0 1rem;
+  }
+
   .node--type-product.bx--card {
     width: 100%;
   }
