Disabled unnecessary :before element and updated version number

--- a/scss/_drupal-override-header.scss
+++ b/scss/_drupal-override-header.scss
@@ -40,6 +40,7 @@ li.dropit-trigger a {
 // Декоративная точка между регистрацией и входом
 nav.block-login ul.menu li+li:before {
   content: "";
+  display: none;
 }
 
 // Меню выбора организации
